<resources>
    <string name="app_name">Pet Friends</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign in</string>
    <string name="doesn_t_have_an_account">doesn\'t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>

    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_name">Name can not be empty!</string>
    <string name="enter_email">Email can not be empty!</string>
    <string name="enter_password">Password can not be empty!</string>
    <string name="length_password">Password must be at least 6 characters!</string>
    <string name="email_invalid">Must valid email!</string>
    <string name="email_is_used">Email is already taken</string>
    <string name="success">Success</string>
    <string name="success_register">Success register</string>
    <string name="failed">Failed</string>
    <string name="failed_register">Failed register account</string>
    <string name="cont">continue</string>

    <string name="success_sign_in">Success sign in</string>
    <string name="failed_sign_in">Failed sign in</string>
    <string name="wrong_password">Wrong email or password!</string>
    <string name="success_logout">Success logout</string>
    <string name="already_login">You already logged in!</string>

    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_edt">Email</string>
    <string name="empty_email">Email can\'t empty</string>
    <string name="hint_name">Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="error_password">Error Password</string>
    <string name="password_not_same">Password is not same</string>
    <string name="back">Back</string>

    <!--    Pet Food -->
    <string name="kind">Kind</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="food_name">Enter food name</string>
    <string name="food_amount">Enter amount (g)</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="error_food_name">Food name can not be empty!</string>
    <string name="error_weight">Food weight can not be empty!</string>
    <string name="success_add_food">Success add food!</string>
    <string name="failed_add_food">Failed add food!</string>

    <string name="add">Add</string>

    <string name="name_string" formatted="true">"Welcome %s,What Type is Your Pet?"</string>
    <string name="select">Select</string>

    <string name="day">Tuesday</string>
    <string name="next_button">Next</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="pet_name">Pet name</string>
    <string name="url_photo">url photo</string>
    <string name="birthday">Birthday</string>
    <string name="done">Done</string>

    <string name="edit_hours">Edit hours?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_day">Select day</string>
    <string name="save_hours">Save hours?</string>
    <string name="empty_hours">Enter hours!</string>

    <string name="manage_shower">Manage Shower</string>
    <string name="water_type">Enter Water Type</string>
    <string name="error_type">Water Type can not be empty!</string>
    <string name="success_add_shower">Success add shower!</string>
    <string name="failed_add_shower">Failed add shower!</string>
    <string name="biodata">Biodata</string>
    <string name="pet_name_text">Nama : %s</string>
    <string name="pet_jenis_text">Jenis : %s</string>
    <string name="pet_gender_text">Gender : %s</string>
    <string name="pet_birthday_text">Birthday : %s</string>
    <string name="no_pet_found">No Pet Found</string>

    <!--    Pet Medicine -->

    <string name="medicine_name">Enter medicine name</string>
    <string name="medicine_amount">Enter amount (g)</string>

    <string name="error_medicine_name">Medicine name can not be empty!</string>
    <string name="error_weight">Medicine weight can not be empty!</string>
    <string name="success_add_medicine">Success add medicine!</string>
    <string name="failed_add_medicine">Failed add medicine!</string>

    <string name="add">Add</string>

    <string name="name_string" formatted="true">"Welcome %s,What Type is Your Pet?"</string>
    <string name="select">Select</string>

    <string name="day">Tuesday</string>
    <string name="next_button">Next</string>
    <string name="pet_profile">Pet Profile</string>
    <string name="pet_name">Pet name</string>
    <string name="url_photo">url photo</string>
    <string name="birthday">Birthday</string>
    <string name="done">Done</string>

    <string name="edit_hours">Edit hours?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_day">Select day</string>
    <string name="save_hours">Save hours?</string>
    <string name="empty_hours">Enter hours!</string>

    <string name="manage_shower">Manage Shower</string>
    <string name="water_type">Enter Water Type</string>
    <string name="error_type">Water Type can not be empty!</string>
    <string name="success_add_shower">Success add shower!</string>
    <string name="failed_add_shower">Failed add shower!</string>

</resources>