<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.petfriends.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.petfriends.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_addFoodActivity"
            app:destination="@id/addFoodActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.petfriends.ui.bookmark.BookmarkFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.petfriends.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <activity
        android:id="@+id/addFoodActivity"
        android:name="com.example.petfriends.ui.add_data.add_food.AddFoodActivity"
        android:label="activity_add_food"
        tools:layout="@layout/activity_add_food"/>


</navigation>