<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_login_box"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_email_login"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:ignore="autoFill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_password_login"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:ignore="autoFill" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="?android:textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:text="@string/forgot_password"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/or_continue_with" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_google_login"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="120dp"
                android:src="@drawable/ic_google"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_facebook_login"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/doesn_t_have_an_account"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/register"
                android:textColor="?android:textColorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>